# SIFT

./: README.md  setup.cfg  setup.py  train.py
sift/: __init__.py  train_faster_rcnn.py
sift/agents/: __init__.py  base_agent.py  ddpq_agent.py  dqn_agent.py
sift/conf/: bar_config.yaml  detection_configs.py  sift_config.yaml
sift/data/: __init__.py  buffer.py  rl_dataset.py  transforms.py  voc_dataset.py
sift/envs/: __init__.py  bbox_bar_env.py  bbox_env.py  bbox_sift_env.py
sift/learners/: __init__.py  bar_pl.py  base_pl.py  sift_model.py  sift_pl.py
sift/models/: actor_critic.py  dqn.py
sift/networks/: __init__.py  actor_critic.py  backbones.py  dqn.py
tests/: test_bar.py  test_sift.py
