[metadata]
name = SIFT
version = attr: sift.__version__
author = Conor Wallace
author_email = conorw8@gmail.com
description = A data-centric reinforcement learning framework for refining object detection data annotations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/conorw8/SIFT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = python, utilities

[options]
setup_requires =
    setuptools>=42
install_requires =
    albumentations==1.1.0
    torch==1.11.0
    torchvision==0.12.0
    pytorch-lightning==1.6.1
    lightning-bolts==0.5.0
    timm==0.5.4
    detectron2 @ git+https://github.com/facebookresearch/detectron2.git
    gym==0.21.0
    Pillow==9.0.1
    hydra-core==1.1.2
    omegaconf==2.1.2
    pytest==7.1.1
python_requires = >= 3.7
packages = find:
